--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,16 @@
     <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
 
     <uses-feature android:name="android.hardware.location.gps" />
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -33,8 +37,17 @@
         <service
             android:name=".BluetoothLeService"
             android:enabled="true" />
+
         <activity android:name=".BLEDeviceControlActivity" />
 
+        <activity android:name=".practiceMapActivity"></activity>
+
+        <meta-data
+            android:name="com.here.android.maps.appid"
+            android:value="wzMCRAkwL8rn7Iai8Keh" />
+        <meta-data
+            android:name="com.here.android.maps.apptoken"
+            android:value="gg2HKN2qNlBZaxkwaeS-1g" />
     </application>
 
 </manifest>
