--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,8 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConnectBluetoothActivity"
-            android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".ConnectBluetoothActivity" />
 
         <service
             android:name=".BluetoothLeService"
